# Radar-Renderer

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  dependabot-lockfile-sync.yml  deploy.yml  e2e.yml
backend/: .env.example  README.md  alembic.ini  config.example.toml  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5c7b8b836d79_users.py  9c1ffdfee6d6_render_tasks.py  oauth_and_verification.py  oauth_states.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: assets_router.py  auth_router.py  files_router.py  internal_router.py  render_router.py  router.py  tasks_router.py
backend/app/clients/: render_worker_client.py
backend/app/core/: config.py  database.py  exceptions.py  lifespan.py  security.py
backend/app/dao/: oauth_dao.py  oauth_state_dao.py  orm.py  render_task_dao.py  user_dao.py  verification_dao.py
backend/app/models/: render_task.py  stored_file.py  user.py
backend/app/schemas/: auth.py  file.py  render.py  task.py
backend/app/service/: auth_service.py  email_service.py  file_service.py  gc_service.py  oauth_service.py  queue_service.py  render_service.py  seed_service.py  silhouette_rewrite.py  task_service.py  user_service.py  verification_service.py
backend/app/utils/: datetime.py  sizing.py
deploy/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
deploy/backend/: Dockerfile  entrypoint.sh
deploy/frontend/: Dockerfile
deploy/render-worker/: Dockerfile
docs/: i18n-migration-plan.md
docs/audit/: 2026-06-10.md
frontend/: .dockerignore  eslint.config.mjs  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
scripts/: gen-release-notes.py  gen-release-notes.sh  init_env.sh  install-hooks.sh  setup-labels.sh
tests/: conftest.py
(+286 files in other folders)
