[project]
name = "radar-chart-backend"
version = "0.1.0"
description = "Radar Chart Rendering FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pyjwt>=2.10.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff.lint]
select = ["ANN", "C901", "B006", "DTZ", "FBT001", "FBT002", "T20", "S", "I", "N", "UP"]
ignore = ["G004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101", "S105", "S106", "S108"]
"../tests/*" = ["ANN", "S101", "S105", "S106", "S108"]
"alembic/*" = ["ANN", "N", "UP", "I"]

# pytest 运行期配置见仓库根 pytest.ini（rootdir 落在仓库根，故配置置于彼处）。